--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Planner</title>
     <link rel="stylesheet" href="/assets/css/style.css">
-    <script defet src="/assets/js/script.js"></script>
+    <script defer src="/assets/js/script.js" type="module"></script>
 </head>
 
 <body>
@@ -15,9 +15,7 @@
     </header>
     <main>
         <section class="todo">
-            <button class="add">
-
-            </button>
+            <button class="add">Add</button>
         </section>
         <section class="doing">
 
@@ -25,14 +23,14 @@
         <section class="done">
 
         </section>
-        <footer>
-            <ul class="names">
-                <li>Celine V.</li>
-                <li>Jonathan M.</li>
-                <li>Edouard d.</li>
-            </ul>
-        </footer>
+
     </main>
-    
+    <footer>
+        <ul class="names">
+            <li>Celine V.</li>
+            <li>Jonathan M.</li>
+            <li>Edouard d.</li>
+        </ul>
+    </footer>
 </body>
 </html>
