lien vers nos github

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <body>
     <header>
-        <h1>Project Planner</h1>
+        <h1><a href="https://github.com/manesjonathan/project-planner">Project Planner</a></h1>
     </header>
     <main>
+    
         <section class="todo">
             <button class="add">Add</button>
         </section>
@@ -23,13 +24,12 @@
         <section class="done">
 
         </section>
-
     </main>
     <footer>
         <ul class="names">
-            <li>Celine V.</li>
-            <li>Jonathan M.</li>
-            <li>Edouard d.</li>
+            <li><a href ="https://github.com/CV136">Celine V.</a></li>
+            <li><a href="https://github.com/manesjonathan">Jonathan M.</a></li>
+            <li><a href="https://github.com/Ed0598">Edouard d.</a></li>
         </ul>
     </footer>
 </body>
