Co-authored-by: Edouard de Romrée  <Ed0598@users.noreply.github.com> Co-authored-by: Céline V <CV136@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
 
         <section class="todo">
             <h2>To do</h2>
+            <div class="todo-div"></div>
         </section>
         <section class="doing">
             <h2>Doing</h2>
+            <div class="doing-div"></div>
         </section>
         <section class="done">
             <h2>Done</h2>
+            <div class="done-div"></div>
         </section>
     </main>
     <aside class="add-task-form" hidden>
