--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <header>
-        <h1><a href="https://github.com/manesjonathan/project-planner">Project Planner</a></h1>
+        <h1><a href="https://github.com/manesjonathan/project-planner" target="_blank">Project Planner</a></h1>
         <button class="add">Add</button>
     </header>
-    <main>
 
+    <main>
         <section class="todo">
             <h2>To do</h2>
             <div class="todo-div"></div>
@@ -31,30 +31,31 @@
             <div class="done-div"></div>
         </section>
     </main>
-    <aside class="add-task-form" hidden>
-            <label for="name">Name:</label>
-            <input type="text" name="name" class="input-name">
-            <select class="status-list" name="statuslist">
-                <option value="todo">Todo</option>
-                <option value="doing">Doing</option>
-                <option value="done">Done</option>
-            </select>
-            <label for="description">Description:</label>
-            <input type="text" name="description" class="input-description">
-            <input type="hidden" class="startdate">
-            <label for="deadline">Deadline:</label>
-            <input type="date" name="deadline" class="input-deadline">
-            <button class="submit-button">Add task</button>
 
-
-
+    <aside class="add-task-form">
+        <label for="name">Name:</label>
+        <input type="text" name="name" class="input-name">
+        <select class="status-list" name="statuslist">
+            <option value="todo">Todo</option>
+            <option value="doing">Doing</option>
+            <option value="done">Done</option>
+        </select>
+        <label for="description">Description:</label>
+        <input type="text" name="description" class="input-description">
+        <input type="hidden" class="startdate">
+        <label for="deadline">Deadline:</label>
+        <input type="date" name="deadline" class="input-deadline">
+        <button class="submit-button">Add task</button>
     </aside>
+
     <footer>
-        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus accusantium consequuntur libero soluta? Voluptas unde possimus nulla velit excepturi animi, tempora earum ab adipisci eveniet! Consequuntur vero vel deleniti velit.</p>
+        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus accusantium consequuntur libero soluta?
+            Voluptas unde possimus nulla velit excepturi animi, tempora earum ab adipisci eveniet! Consequuntur vero vel
+            deleniti velit.</p>
         <ul class="names">
-            <li><a href="https://github.com/CV136">Celine V.</a></li>
-            <li><a href="https://github.com/manesjonathan">Jonathan M.</a></li>
-            <li><a href="https://github.com/Ed0598">Edouard d.</a></li>
+            <li><a href="https://github.com/CV136" target="_blank">Celine V.</a></li>
+            <li><a href="https://github.com/manesjonathan" target="_blank">Jonathan M.</a></li>
+            <li><a href="https://github.com/Ed0598" target="_blank">Edouard d.</a></li>
         </ul>
     </footer>
 </body>
