filtre par délais et par noms

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <header>
         <h1><a href="https://github.com/manesjonathan/project-planner" target="_blank">Project Planner</a></h1>
         <button class="add">Add</button>
+        <button class="delay--filter">Delay</button>
+        <button class="name--filter">Name</button>
     </header>
 
     <main>
