--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body>
     <header>
-        <h1><a href="https://github.com/manesjonathan/project-planner" target="_blank">Project Planner</a></h1>
-        <button class="add">Add</button>
-        <button class="delay--filter">Delay</button>
-        <button class="name--filter">Name</button>
+        <h1><a href="https://github.com/manesjonathan/project-planner" target="_blank">PROJECT PLANNER</a></h1>
+        <button class="add">Add task</button>
+        <button class="delay-filter">Sort by delay</button>
+        <button class="name-filter">Sort by name</button>
     </header>
 
     <main>
@@ -51,9 +51,7 @@
     </aside>
 
     <footer>
-        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus accusantium consequuntur libero soluta?
-            Voluptas unde possimus nulla velit excepturi animi, tempora earum ab adipisci eveniet! Consequuntur vero vel
-            deleniti velit.</p>
+        <p>Exercice réalisé dans le cadre de notre formation à BeCode.</p>
         <ul class="names">
             <li><a href="https://github.com/CV136" target="_blank">Celine V.</a></li>
             <li><a href="https://github.com/manesjonathan" target="_blank">Jonathan M.</a></li>
