bouton filtre todo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <button class="add">Add task</button>
         <button class="delay-filter">Sort by delay</button>
         <button class="name-filter">Sort by name</button>
+        <button class="todo--filter">Todo Filter
+        </button>
     </header>
 
     <main>
