avancement drag drop

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Project Planner</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <script defer src="/assets/js/script.js" type="module"></script>
-    <script type="module">import { ondragover } from "/assets/js/script.js"; window.ondragover = ondragover;</script>
-    <script type="module">import { ondrop} from "/assets/js/script.js"; window.ondrop = ondrop;</script>
+    <script type="module">import { onDragOver } from "/assets/js/script.js"; window.onDragOver = onDragOver;</script>
+    <script type="module">import { onDrop} from "/assets/js/script.js"; window.onDrop = onDrop;</script>
+    <script type="module">import { onDragStart} from "/assets/js/script.js"; window.onDragStart = onDragStart;</script>
     <script defer src="/assets/js/form.js" type="module"></script>
 </head>
 
