--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <button class="add">Add task</button>
         <button class="delay-filter">Sort by delay</button>
         <button class="name-filter">Sort by name</button>
-        <button class="todo--filter">Todo Filter
-        </button>
+        <input type="checkbox" class="todo-filter" id="todo--filter"><label for="todo--filter">ToDo Filter</label> 
+        </input>
     </header>
 
     <main>
