--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <button class="add">Add task</button>
         <button class="delay-filter">Sort by delay</button>
         <button class="name-filter">Sort by name</button>
-        <label class="container" for="todo-filter">ToDo Filter <input type="checkbox" class="todo-filter"><span class="checkmark"></span></label>
-        </input>
+        <input type="checkbox" class="todo-filter" id="todo--filter"><label for="todo--filter" class="todo">ToDo Filter</label>
+    </input>
     </header>
 
     <main>
