--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <script defer src="/assets/js/script.js" type="module"></script>
     <script defer src="/assets/js/form.js" type="module"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Elsie&display=swap" rel="stylesheet">
 </head>
 
 <body>
