--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <script defer src="/assets/js/script.js" type="module"></script>
     <script defer src="/assets/js/form.js" type="module"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Elsie&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@1,700&family=Elsie&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@1,900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -24,15 +26,15 @@
 
     <main>
         <section class="todo">
-            <h2>To do</h2>
+            <h2 id="todo">To do</h2>
             <div class="todo-div todo dropzone"></div>
         </section>
         <section class="doing">
-            <h2>Doing</h2>
+            <h2 id="doing">Doing</h2>
             <div class="doing-div doing dropzone"></div>
         </section>
         <section class="done">
-            <h2>Done</h2>
+            <h2 id="done">Done</h2>
             <div class="done-div done dropzone"></div>
         </section>
     </main>
