--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Planner</title>
     <link rel="stylesheet" href="/assets/css/style.css">
+    <script src="https://kit.fontawesome.com/26838d0dd7.js" crossorigin="anonymous"></script>
     <script defer src="/assets/js/script.js" type="module"></script>
     <script defer src="/assets/js/form.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Elsie&display=swap" rel="stylesheet">
