Co-authored-by: Edouard de Romrée  <Ed0598@users.noreply.github.com> Co-authored-by: Céline V <CV136@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <script src="https://kit.fontawesome.com/26838d0dd7.js" crossorigin="anonymous"></script>
     <script defer src="/assets/js/script.js" type="module"></script>
     <script defer src="/assets/js/form.js" type="module"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@1,700&family=Elsie&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@1,700&family=Elsie&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@1,900&display=swap" rel="stylesheet">
 
 </head>
@@ -21,8 +24,9 @@
         <button class="add">Add task</button>
         <button class="delay-filter">Sort by delay</button>
         <button class="name-filter">Sort by name</button>
-        <input type="checkbox" class="todo-filter" id="todo--filter"><label for="todo--filter" class="todo">ToDo Filter</label>
-    </input>
+        <input type="checkbox" class="todo-filter" id="todo--filter"><label for="todo--filter" class="todo">ToDo
+            Filter</label>
+        </input>
     </header>
 
     <main>
@@ -44,7 +48,7 @@
         <label for="name">Name:</label>
         <input type="text" name="name" class="input-name">
         <select class="status-list" name="statuslist">
-            <option value="todo">Todo</option>
+            <option value="todo">To-do</option>
             <option value="doing">Doing</option>
             <option value="done">Done</option>
         </select>
@@ -54,8 +58,8 @@
         <label for="deadline">Deadline:</label>
         <input type="date" name="deadline" class="input-deadline">
         <div class="buttons">
-            <button class="submit-button">Add task</button>
             <button class="exit-button">Discard</button>
+            <button class="submit-button">Add task</button>
         </div>
     </aside>
 
