--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Project Planner">
     <title>Project Planner</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+<!--     <link rel="stylesheet" href="/assets/css/style.css" class="alternate-style" title="custom-0">-->    
+<link rel="stylesheet" href="/assets/css/custom-1.css" class="alternate-style" title="custom-1">
     <script src="https://kit.fontawesome.com/26838d0dd7.js" crossorigin="anonymous"></script>
     <script defer src="/assets/js/script.js" type="module"></script>
     <script defer src="/assets/js/form.js" type="module"></script>
@@ -57,7 +58,7 @@
         <input type="text" name="description" class="input-description">
         <input type="hidden" class="startdate">
         <label for="deadline">Deadline:</label>
-        <input type="date" name="deadline" class="input-deadline">
+        <input type="datetime-local" name="deadline" class="input-deadline">
         <div class="buttons">
             <button class="exit-button">Discard</button>
             <button class="submit-button">Add task</button>
